fix(YB-342): 멘션 DTO 안에 id 리스트를 담도록 수정